# Options-Pricing-Lib

./: .gitignore  CLAUDE.md  Options_Pricing_Library_Plan.docx  README.md
options-pricer/: CMakeLists.txt  CMakePresets.json  compile_commands.json  vcpkg.json
options-pricer/.cache/clangd/index/: benchmark.cpp.072FB93B86751635.idx  binomial_tree.cpp.AE82DBBE22C80F90.idx  black_scholes.cpp.5BA90C59109EF648.idx  black_scholes.h.A0B877BB3196D931.idx  greeks.cpp.01F85F5B55EDEA4B.idx  main.cpp.1A31184972A90EA1.idx  market_data.h.7646C669FF1C1717.idx  math_utils.h.81CB8BE1FBEE5AF0.idx  monte_carlo.cpp.437564D1848D9419.idx  option.h.FCE639920C3960AB.idx  payoff.h.1FCE374CECC1F870.idx  pricing_model.h.D447CEE8E9B87D0B.idx  test_binomial_tree.cpp.95E3B5B5F80FEFDA.idx  test_black_scholes.cpp.9D10F641B9F5D966.idx  test_greeks.cpp.782F9438D028534D.idx  test_monte_carlo.cpp.17B06665EEACDCD4.idx  test_payoff.cpp.D4EBAFC841D7306E.idx
options-pricer/include/: black_scholes.h  market_data.h  math_utils.h  monte_carlo.h  option.h  payoff.h  pricing_model.h
options-pricer/notes/: black_scholes_concepts.txt  monte_carlo_concepts.txt
options-pricer/notes/on_include/: market_data_h.txt  option_h.txt  payoff_h.txt  pricing_model_h.txt
options-pricer/src/: benchmark.cpp  black_scholes.cpp  main.cpp  monte_carlo.cpp
options-pricer/tests/: test_black_scholes.cpp  test_greeks.cpp  test_monte_carlo.cpp  test_payoff.cpp
options-pricer/~/vcpkg/installed/arm64-osx/lib/pkgconfig/: CLI11.pc
options-pricer/~/vcpkg/installed/vcpkg/: compiler-file-hash-cache.json  manifest-info.json  status
(+14 files in other folders)
